[package]
name = "portform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
clap = {version = "4.3.17", features=["derive"]}
printpdf = "0.5.3"
serde = { version ="1.0.1", features=["derive"] }
serde_json = "1.0.1"

[lib]
name = "pf_lib"
path = "src/lib.rs"